# nlp

./: .gitignore  CONTRIBUTING.md  README.md  TEMPLATE_NLP_STEPS.ipynb  main.py  pyproject.toml
A1/: NOTES.md  README.md
A1/app/: app.py
A1/code/: a1.ipynb
A1/code/class/: 01 - Word2Vec (Skipgram) from Scratch.ipynb  04 - GloVe (Gensim).ipynb
A1/data/: capital-common-countries.txt  gram7-past-tense.txt
A1/model/: GloVe.pkl  Skipgram.pkl  SkipgramNegSampling.pkl
A2/: NOTES.md  READING_NOTES.md  README.md
A2/app/: app.py  lstm.py  tokenizer.py  vocab.py
A2/code/: a2.ipynb  best-val-lstm_lm.pt
A2/code/class/: LSTM LM.ipynb  best-val-lstm_lm.pt
A2/model/: a2_vocab_lm.pkl  cpu_a2-lstm_lm.pt  lstm_lm_checkpoint.pt
A3/: NOTES.md  README.md
A3/app/: app.py  save_vocab.py
A3/app/templates/: index.html
A3/code/: a3.ipynb
A3/code/class/code/: MT + Attention.ipynb
A3/code/models/: vocabs.pt
A4/: NOTES.md  README.md
A4/app/: app.py
A4/code/: a4.ipynb  bert.py
A4/code/class/: BERT.ipynb
A4/notes/: METRICS_QUICK_REFERENCE.md  NOTES.md  classification_metrics_explained.md
extra/: README.md
extra/standford2024-spring/a1/student/: exploring_word_vectors.ipynb
utils/: device.py
