[project]
name = "assignment-npl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "spicy>=0.16.0",
    "torch>=2.9.1",
]
