[project]
name = "assignment-npl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "datasets>=4.5.0",
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "lab>=8.8",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "spicy>=0.16.0",
    "torch>=2.9.1",
    "torchdata>=0.11.0",
    "torchtext>=0.6.0",
    "transformers>=5.1.0",
]
